feat(core): 升级Disruptor到4.0.0版本并完善配置验证机制
- 将Disruptor从3.4.4升级到4.0.0版本
- 适配Disruptor 4.0.0 API变化，修改构造函数参数类型
- 完善配置验证机制，添加验证选项支持（严格模式、警告模式）
- 实现验证器适配器模式和工厂模式统一管理验证器
- 更新README和IFLOW文档中的技术栈信息
- 完善S3配置验证器，添加警告类型验证
- 添加相关测试用例